--- a/package.json
+++ b/package.json
@@ -30,7 +30,17 @@
     "@types/node": "^14.14.35",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.7",
+    "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
